# hello-visual-studio-code-cpp

./: .editorconfig  .gitignore  CMakeLists.txt  HOW-TO.md  INSTALL.md  README.md  TODO.md  VIDEO.md
.github/: FUNDING.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  enhancement.yaml  feature.yaml
docs/: 详细安装.md
include/: hello_cpp.h
src/: demo02_hello_cmake.cpp  demo03_hello_cxk.cpp  leetcode01_two_number_sum.cpp  leetcode02_rev_number.cpp
